# media-android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ad_opensl_es.cpp
app/src/main/cpp/common/: CPPLog.cpp  CPPLog.h  Common.h  prefix-header.h
app/src/main/cpp/opensles/: OpenSLESContext.cpp  OpenSLESContext.h  SLAudioPlayer.cpp  SLAudioPlayer.h  openslutil.cpp  openslutil.h
app/src/main/java/com/media/: Main2Activity.java  MainActivity.java
app/src/main/java/com/media/Audio/: ADAudioMediaPlayer.java  ADAudioTrackPlayer.java  ADOpenSLES.java  AudioPlayInterface.java
app/src/main/java/com/media/Common/: ADAssetsManager.java  ByteUtil.java  DDlog.java  PathTool.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/media/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
